--- a/index.html
+++ b/index.html
@@ -58,10 +58,9 @@
       <nav>
         <div class="brand">내 홈페이지<span class="logo-dot"></span></div>
         <div class="navlinks">
-          <a href="#about">소개</a>
-          <a href="#services">서비스</a>
-          <a href="#work">포트폴리오</a>
-          <a href="#contact" class="btn primary">문의하기</a>
+          <a href="/">Home</a>
+          <a href="/stock.html">Stock Market</a>
+          <a href="/#contact" class="btn primary">문의하기</a>
         </div>
       </nav>
     </div>
@@ -128,6 +127,28 @@
         <div class="card">
           <h3>프로젝트 3</h3>
           <p class="muted">간단 설명 · 결과 링크</p>
+        </div>
+      </div>
+    </section>
+
+    <section id="faq">
+      <div class="section-title"><div class="bar"></div><h2>FAQ</h2></div>
+      <div class="grid cols-2">
+        <div class="card">
+          <h3>어떤 용도로 쓸 수 있나요?</h3>
+          <p class="muted">개인 포트폴리오, 소규모 비즈니스 랜딩, 프로젝트 소개용 등으로 바로 사용 가능합니다. 섹션 텍스트만 바꾸세요.</p>
+        </div>
+        <div class="card">
+          <h3>배포는 어떻게 하나요?</h3>
+          <p class="muted">GitHub Pages, Netlify, Vercel 중 하나에 <code>index.html</code>을 업로드하면 됩니다. 이미 안내한 순서를 따르면 10분 내 배포 가능.</p>
+        </div>
+        <div class="card">
+          <h3>문의 폼은 작동하나요?</h3>
+          <p class="muted">기본은 안내 알림만 띄웁니다. 실제 수집은 Formspree, Google Apps Script 등과 연동해 주세요.</p>
+        </div>
+        <div class="card">
+          <h3>디자인은 변경할 수 있나요?</h3>
+          <p class="muted">가능합니다. 색상 변수, 섹션 순서, 카드 개수 등을 자유롭게 수정하세요.</p>
         </div>
       </div>
     </section>
