--- a/stock.html
+++ b/stock.html
@@ -48,6 +48,7 @@
         <div class="navlinks">
           <a href="/">Home</a>
           <a href="/stock.html">Stock Market</a>
+          <a href="/matjip.html">맛집</a>
           <a href="/#contact" class="btn primary">문의하기</a>
         </div>
       </nav>
