--- a/matjip.html
+++ b/matjip.html
@@ -87,7 +87,7 @@
 </main>
 
 <!-- Kakao Maps JS (services=Places/Geocoder) -->
-<script src="//dapi.kakao.com/v2/maps/sdk.js?appkey=6096c5ef0866cfa555f1040e3f21bc62&libraries=services"></script>
+<script src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=6096c5ef0866cfa555f1040e3f21bc62&libraries=services"></script>
 <script>
   document.getElementById('year').textContent = new Date().getFullYear();
 
