--- a/test-map.html
+++ b/test-map.html
@@ -12,7 +12,7 @@
 <body>
 <div id="map"></div>
 
-<script src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=여기에_JavaScript_키&autoload=false"></script>
+<script src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=6096c5ef0866cfa555f1040e3f21bc62&autoload=false"></script>
 <script>
   kakao.maps.load(function(){
     const map = new kakao.maps.Map(document.getElementById('map'), {
