--- a/index.html
+++ b/index.html
@@ -185,6 +185,12 @@
     </div>
   </main>
 
+  <!doctype html><meta charset="utf-8">
+<ul>
+  <li><a href="/test-map.html">test-map.html</a></li>
+  <li><a href="/matjip.html">matjip.html</a></li>
+</ul>
+  
   <script>
     document.getElementById('year').textContent = new Date().getFullYear();
   </script>
